// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should matches the snapshot 1`] = `
<StyledAvatar
  rounded={true}
>
  <styled.div>
    <styled.img
      src="https://res.cloudinary.com/duo6ruqkc/image/upload/v1550848181/child_rtmjgd.png"
    />
  </styled.div>
</StyledAvatar>
`;

exports[`<Avatar /> should render without crashing given the props 1`] = `
<StyledAvatar
  rounded={true}
  size={100}
>
  <styled.div>
    <styled.img
      src="test"
    />
  </styled.div>
</StyledAvatar>
`;
